# odc-algo

./: .gitignore  .pre-commit-config.yaml  2.py  Cargo.toml  MANIFEST.in  README.md  matt_test.py  pixi.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
odc/algo/: __init__.py  _broadcast.py  _dask.py  _dask_stream.py  _geomedian.py  _geomedian_impl.py  _grouper.py  _masking.py  _memsink.py  _numeric.py  _numexpr.py  _percentile.py  _rgba.py  _tiff.py  _tools.py  _types.py  _vendored_isotropic.py  _warp.py  io.py  pixel.py
src/: geomedian.rs  lib.rs  mad.rs  percentile.rs
tests/: manual_testing.py  test_benchmark.py  test_dask.py  test_geomedian.py  test_geomedian_int16.py  test_geomedian_uint16.py  test_geomedian_with_mads.py  test_grouper.py  test_io.py  test_masking.py  test_memsink.py  test_numeric.py  test_percentile.py  test_rust_percentile.py  test_warp.py
tests/test_geomedian/: test_geomedian_with_mads.nc
tests/test_geomedian_with_mads/: test_geomedian_with_mads.nc  test_geomedian_with_mads.nc.aux.xml
