[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "odc-algo"
description = "Miscellaneous Algorithmic helper methods"
dynamic = ["version"]
authors = [
    {name = "Open Data Cube"},
]
dependencies = [
    "affine",
    "dask",
    "dask_image",
    "datacube>=1.8.5",
    "distributed",
    "numexpr",
    "numpy",
    "rasterio>=1.3.2",
    "scikit-image",
    "toolz",
    "xarray>=2023.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache License 2.0"}
maintainers = [
    {name = "Open Data Cube"},
]

[project.urls]
Homepage = "https://www.opendatacube.org/"
Source = "https://github.com/opendatacube/odc-algo/"

[project.optional-dependencies]
hdstats = ["hdstats>=0.1.8.post1"]
s3 = ["boto3", "odc-cloud"]

[tool.setuptools]
packages = ["odc.algo"]
