[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "odc-algo"
description = "Miscellaneous Algorithmic helper methods"
authors = [{name = "Open Data Cube"}]
maintainers = [{name = "Open Data Cube"}]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "affine",
    "dask",
    "dask-image",
    "distributed",
    "numexpr",
    "numpy",
    "rasterio>=1.3.2",
    "odc-geo",
    "scikit-image",
    "toolz",
    "xarray",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://opendatacube.org/"
Source = "https://github.com/opendatacube/odc-algo/"

[project.optional-dependencies]
hdstats = ['hdstats>=0.1.8.post1']
s3 = [
    'boto3',
    'odc-cloud'
]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pdbpp>=0.11.6",
    'pytest',
    "pytest-cov>=6.1.1",
    'ruff',
    "types-affine>=0.1.0",
    "pandas-stubs",
]

[tool.ruff.lint]
select = [
    "A",  # Don't shadow built-ins
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "EXE", # flake8-executable
    "I",  # isort
    "N",  # pep8-naming
    "RUF", # Ruff-specific rules
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "T10", # flake8-debugger
]
ignore = [
    # FIXME: re-enable these rules.
    "B008",
    "B022",
    "B023",
    "B028",
    "B905",
    "RUF005",
    "RUF012",
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "A", "B", "H", "L", "M", "N", "NX", "NY", "R", "S",
    "T", "W", "WS", "X", "XX", "XY", "YY", "Y", "Z",
    "ACL", "NT", "NB", "GB"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.mypy]
python_version = '3.10'
allow_redefinition = true
enable_error_code = ['explicit-override']
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
