[metadata]
name = odc-algo
description = Miscellaneous Algorithmic helper methods
version = attr: odc.algo._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
# rust extensions are not zip safe, same as C-extensions
zip_safe = false
packages = find_namespace:
python_requires = >=3.8
tests_require = pytest
setup_requires = setuptools-rust >= 0.12.1
install_requires =
    affine
    dask
    dask-image
    datacube>=1.8.5
    distributed
    numexpr
    numpy
    rasterio>=1.3.2
    scikit-image
    toolz
    xarray>=2023.7.0

[options.extras_require]
hdstats = hdstats>=0.1.8.post1
s3 =
    boto3
    odc-cloud

dev =
    pytest
    pytest-datadir

[options.packages.find]
include =
  odc*
